@@ -13,6 +13,8 @@
     * src/seahorse-key-properties.c:
     * src/seahorse-key-properties.glade: Remove annoying window
     resize flicker when displaying dynamically built dialogs.
+    * src/seahorse-key-manager-store.c: Fix problem with key manager 
+    columns not responding to gconf changes properly.
     
 2005-02-16  Alexander Shopov  <ash@contact.bg>
 
